# crystal_video_maker

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
crystal_video_maker/: __init__.py  common_enum.py  common_types.py  constants.py  main.py  performance.py  types.py  utils.py
crystal_video_maker/artist/: __init__.py  add_details.py  colors.py  enum.py  hands.py  parallel.py  plot.py
crystal_video_maker/artist_optimized/: constants.py  hands_optimized.py  parallel.py  plot_optimized.py  utils.py
crystal_video_maker/core/: __init__.py  geometry.py  structure_types.py  structures.py
crystal_video_maker/editor/: __init__.py  gif.py  image.py  media.py  video.py
crystal_video_maker/rendering/: __init__.py  bonds.py  cells.py  sites.py  styling.py  vectors.py
crystal_video_maker/utils/: __init__.py  colors.py  helpers.py  labels.py
crystal_video_maker/visualization/: __init__.py  camera.py  camera_presets.py  core.py  interactive_plotly_tools.py  rendering.py
crystalviewer/: __init__.py  boundary.py  caching.py  camera.py  config.py  core.py  geometry.py  performance.py  rendering.py  scene.py  structure.py  styling.py  utils.py
